--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask==1.1.2
-pandas==1.3.1
+#Flask==1.1.2
+Flask==2.1.0
 numpy==1.20.3
-scikit_learn==0.24.2
-gunicorn==20.1.0
+pandas==1.3.1
+scikit_learn==1.0.2
